--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^5.1.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router": "^7.6.3",
     "react-slick": "^0.30.3",
