--- a/backend-with-express/package.json
+++ b/backend-with-express/package.json
@@ -18,6 +18,7 @@
     "express": "^5.1.0",
     "express-mysql-session": "^3.0.3",
     "express-session": "^1.18.1",
+    "multer": "^2.0.2",
     "mysql2": "^3.14.1"
   },
   "devDependencies": {
